welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:25: error: c is already defined as variable c
var c=0
    ^Diagonal:31: error: not found: value diago
	for (k<-1 to taillediago(diago)) {		
                                 ^